# a2retronet

./: CMakeLists.txt  LICENSE  README.md  board.c  board.h  config.c  config.h  diskio.c  firmware.S  firmware.h  gen.c  gen.h  getting-started.md  hdd.c  hdd.h  hw_config.c  incbin.S  main.c  main.h  msc.c  msc_device.c  msc_host.c  ser.c  ser.h  slip.c  slip.h  sp.c  sp.h  tusb_config.h  usb_descriptors.c  usb_diskio.c  usb_diskio.h
6502/: SMARTPORT.S  SSC.C800.S  SSC.CF00.S  SSC.CMD.S  SSC.CN00.S  SSC.CORE.S  SSC.HILEV.S  SSC.S  SSC.TERM.S  SSC.UTIL.S  ssc_show_hide.S
fatfs/source/: ffconf.h
sd_spi/include/: glue.h
sd_spi/sd_driver/: hw_config.c
sd_spi/src/: glue.c
